Bug fix overflow-x

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -47,6 +47,7 @@ html {
 body {
   font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
   background-color:#f1f4fa;
+  overflow-x: hidden !important;
 }
 
 h1{
